# enroute

./: CMakeLists.txt  Dockerfile  Makefile  NOTICE  README.md  azure-pipelines.yml  config.json  entrypoint.sh  go.mod  go.sum  run_cp.sh  run_docs.sh  run_dp.sh
artifacts/certs/: wildcard.ingresspipe.io.fullchain.pem  wildcard.ingresspipe.io.privkey.pem
artifacts/gatewayhost/: crds.yaml  enroute.yaml  rbac.yaml
artifacts/k8s-example-yaml/: crds.yaml  enroute.yaml  kuard.works.yaml  kuard.works2.yaml  kuard.works3.yaml  kuard.works5.httpfilter.yaml  rbac.yaml
artifacts/k8s-yaml/: crds.yaml  curl.txt  enroute.yaml  kuard.yaml  kubectl-get-all-n-enroute-gw-k8s-o-wide.txt  rbac.yaml  service.yaml
artifacts/licscript/: addlicense.sh  lic_set_var.sh  license.txt
cmd/contour/: contour.go
cmd/enroute/: contour.go  serve.go
documentation/: run-authorized-request.txt  run-copy-service-route.txt  run-curl-commands-to-program-http-listener.txt  run-envoy-with-enroute.txt  run-patch-update-service-route.txt  run-post-service-deepcopy.txt  run_new_cp.sh  run_new_dp.sh
documentation/asciinema/: tmp4kknx7j5-ascii.cast  tmphoxu4mvf-ascii.cast  tmpxk2u0_ta-ascii.cast
documentation/enroute/: config.toml
documentation/example-configs/: e.json  f.json  g.json  globalconfig_c.json  globalconfig_d.json  globalconfig_e.json  globalconfig_f.txt  globalconfig_g.json  h.json  script.lua  script2.lua  script_bad.lua
documentation/outputs/: install-run-certbot.txt  run-associate-cert-with-service.txt  run-copy-service.txt  run-copy-upstream.txt  run-create-secret-add-key-cert.txt  run-curl-as-client-to-envoy.txt  run-envoy-with-enroute.txt  run-patch-service.txt  run-patch-upstream.txt  run-proxy-dump-with-output.txt
documentation/sample-adminproxy-config/: all-cds.txt  all-lds.txt  all-proxy-dump.json  all-rds.txt  all-sds.txt  all-service.json  all-upstream.json
enroute-cp/: CMakeLists.txt  Makefile  config.yaml  docker-compose.yaml  go.mod  go.sum  webhttp.go
enroute-cp/docs/: docs.go  go.mod  go.sum  (+2 more)
enroute-dp/: CMakeLists.txt  Dockerfile  Makefile  Makefile.old  admin_proxy_create_cmds.txt  config.json  entrypoint.sh  go.mod  go.sum  last_commit.txt  run_cp.sh  run_dp.sh  run_webhttp.sh  steps_to_demo.txt
enroutectl/: CMakeLists.txt  deadcode.txt  enroutectl.yaml  go.mod  go.sum  main.go
examples/: CMakeLists.txt
helm-chart/: Makefile  enroute-0.1.0.tgz  enroute-0.2.0.tgz  enroute-0.4.0.tgz  enroute-0.4.1.tgz  enroute-0.5.0.tgz  enroute-crds-0.1.0.tgz  enroute-crds-0.2.0.tgz  helm_cmd.sh  helm_cmd_certmanager.sh  httpbin-bin-service.yaml  index.yaml  service-policy-0.1.0.tgz  service-policy-0.2.0.tgz  service-policy-0.3.0.tgz  service-policy-0.3.1.tgz
packaging/: create_config.sh
saaras/: fetch.go  gclient.go  gqlq.go  ir.go  new_queries.txt  pg.go  saarascloudcache.go  secrets.go
(+371 files in other folders)
